<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sorelyth.manillas.Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/manillas"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="508dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/material"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cmbMaterial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="475dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/dije"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cmbDije"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="508dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/color"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cmbColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="614dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/moneda"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cmbMoneda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="475dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/cantidad"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtCantidad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="true"
                android:fontFamily="casual"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="sans-serif"
            android:onClick="Calcular_Manillas"
            android:text="@string/calcular"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/total"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
